--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <nav>
     <ul>
-      <li><a href="#">Главная</a></li>
+      <li><a href="https://z1zix1.github.io/index/">Главная</a></li>
       <li><a href="file:///C:/Users/%D0%9C%D0%B0%D1%81%D1%82%D0%B5%D1%80%207/Desktop/%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D0%B2%D0%B0%D1%8F/news.html">Новости</a></li>
       <li><a href="file:///C:/Users/%D0%9C%D0%B0%D1%81%D1%82%D0%B5%D1%80%207/Desktop/%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D0%B2%D0%B0%D1%8F/contacts.html">Контакты</a></li>
     </ul>
